<resources>
    <string name="app_name">Darma</string>
    <string name="str_password">Password</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_wallet_list">Wallets</string>
    <string name="str_add_new">New</string>
    <string name="str_initial_notice">Please make a selection below to either create a new wallet or restore a wallet</string>
    <string name="str_create_wallet">Create Wallet</string>
    <string name="str_recovery_wallet">Recover Wallet</string>
    <string name="str_create_wallet_notice_1">For your assets security, please set password first. The password will be used for private key and transaction authorization.</string>
    <string name="str_create_wallet_notice_2">It is a local password. DRAMA will not store it and can not be retrieved. Please keep it well.</string>
    <string name="str_wallet_name">Wallet name</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_please_input_wallet_name">Please enter the wallet name</string>
    <string name="str_please_input_pwd">Please enter password</string>
    <string name="str_please_input_re_pwd">Please enter password again</string>
    <string name="str_two_inconsistent_passwords">The password entered twice is inconformity.</string>
    <string name="str_wallet_name_rule">3-16 characters, numbers, letters in uppercase and lowercase, and underscore character allowed</string>
    <string name="str_wallet_pwd_rule">6-32 characters, mixed with numbers, letters in uppercase and lowercase, and special characters. Please note your password should at least include numbers and letters in either uppercase or lowercase.</string>
    <string name="str_mnemonic_notice_1">Your wallet can be recovered using the below seed.</string>
    <string name="str_mnemonic_notice_2">You must save the SEED in a safe secure location.
Sharing your SEED is equal to sharing your wallet.</string>
    <string name="str_mnemonic_notice_3">If your SEED is lost, consider your wallet as lost.</string>
    <string name="str_please_copy_your_mnemonic">Please copy your SEED words</string>
    <string name="str_copy_mnemonic_notice_1">Backup SEED words, do not captrue screenshot</string>
    <string name="str_copy_mnemonic_notice_2">Do not capture screenshot. If someone get your seed words, he is free to get your assets.</string>
    <string name="str_ok">OK</string>
    <string name="str_I_have_copied_and_saved">I have copy and save my SEED words.</string>
    <string name="str_copy_success">Copied</string>
    <string name="str_copy_mnemonic_word_notice">Please put your wallet in safe location. Do not store it in clear text or send it via internet, or else you lose your wallet.</string>
    <string name="str_mnemonic_verify_notice">To make sure you have copied your SEED words in right form, please select the corresponding words.</string>
    <string name="str_please_confirm_your_mnemonic">Please confirm your SEED words.</string>
    <string name="str_please_click_on_the_mnemonics">Please click SEED words according above serial No.</string>
    <string name="str_verify">Verify</string>
    <string name="str_skip_mnemonic_verify">Thanks. Skip.</string>
    <string name="str_verify_fail_please_retry">Verification failed. Try again.</string>
    <string name="str_recovery_darma_wallet">Recover Wallet</string>
    <string name="str_private_key_recovery_wallet">Recover from private keys</string>
    <string name="str_mnemonic_recovery">Recover from SEED words</string>
    <string name="str_recovery_view_only">Recover View-only Wallet</string>
    <string name="str_wallet_starting_block_height">Wallet start Topoheight(optional)</string>
    <string name="str_private_key">Spend private key (64 hex characters)</string>
    <string name="str_please_input_private_key">Please enter private key</string>
    <string name="str_private_key_error1">The private key is 64 hex characters </string>
    <string name="str_recover_from_seed">Recover from SEED words</string>
    <string name="str_mnemonic_hint">25 Seed Words</string>
    <string name="str_please_input_mnemonic">Please enter SEED words</string>
    <string name="str_mnemonic_error">Please enter 25 SEED words</string>
    <string name="str_private_key_open_64_chars">Spend public Key(64 hex characters)</string>
    <string name="str_view_key_private_64_chars">View private Key(64 hex characters)</string>
    <string name="str_key_error">Private key can not be blank</string>
    <string name="str_locked_1">Locked</string>
    <string name="str_sync_complete">Synchronized</string>
    <string name="str_block_height">Height</string>
    <string name="str_send">Send</string>
    <string name="str_send_view_only">Send(read-only)</string>
    <string name="str_receive">Receive</string>
    <string name="str_currentheight">Height</string>
    <string name="str_all">All</string>
    <string name="str_wallet">Wallet</string>
    <string name="str_transfer">Exchange</string>
    <string name="str_setting">Settings</string>
    <string name="str_start_sync">Starting sync</string>
    <string name="str_residue_block">Remaining</string>
    <string name="str_sync">syncronizing</string>
    <string name="str_wallet_disconnected">Disconnect</string>
    <string name="str_wallet_offline">Offline</string>
    <string name="str_net_disconnecteed">Network is disconnected</string>
    <string name="str_trans_detail">Transaction details</string>
    <string name="str_send_success">Transaction success</string>
    <string name="str_trans_id">Transaction ID</string>
    <string name="str_date">Date</string>
    <string name="str_money">Amount</string>
    <string name="str_fee">Fee</string>
    <string name="str_height">Height</string>
    <string name="str_type">Type</string>
    <string name="str_pending">Pending</string>
    <string name="str_trans_locked">Transaction Locked</string>
    <string name="str_block_explor">Block explorer</string>
    <string name="str_tx_key">Tx key</string>
    <string name="str_dest_addr">Dest address</string>
    <string name="atr_auto">Auto</string>
    <string name="str_view_tx_key_notice">Tx private key is not found, it might be lost if you restore the wallet by seeds or keys.</string>
    <string name="str_transfer_address">Dest Address</string>
    <string name="str_wallet_manager">Wallets</string>
    <string name="str_open">Open</string>
    <string name="str_re_name">Rename</string>
    <string name="str_delet">Remove</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_input_pwd">Enter Password</string>
    <string name="str_input_pwd_notice">Please enter the password</string>
    <string name="str_please_input_new_name">Enter New Name</string>
    <string name="str_please_enter_new_name">Please enter new name</string>
    <string name="error_wallet_not_exist">Wallet does not exist</string>
    <string name="error_wallet_name_already_exist">Wallet name existed</string>
    <string name="str_delete_wallet_notice">Delete the wallet. Confirm?</string>
    <string name="str_confirm_delete">Confirm</string>
    <string name="str_your_wallet">Your wallet</string>
    <string name="str_unlock_balance">DARMA Available </string>
    <string name="str_receive_address">DARMA Address</string>
    <string name="str_payment_id_hint">Payment ID(optional)</string>
    <string name="str_desc">Remark</string>
    <string name="str_send_transfer">Send</string>
    <string name="str_input_money">Amount</string>
    <string name="str_share">Share</string>
    <string name="str_please_input_receive_address">Please enter receiving address</string>
    <string name="str_please_input_amount">Please enter transfer amount</string>
    <string name="str_permission_request">App requires the following permissions, please allow</string>
    <string name="str_notice_send_all">Send All</string>
    <string name="str_address_error">Invalid destination address</string>
    <string name="str_sending_error">Sending Error</string>
    <string name="str_confirm_send">Confirm transaction</string>
    <string name="str_view_txid">View TXID</string>
    <string name="str_address_book">Address book</string>
    <string name="str_address">Address</string>
    <string name="str_please_input_remark">Please enter remarks</string>
    <string name="str_scan_notice">Put the QR code in the frame and it will scan automatically</string>
    <string name="str_camera_permission">Camera permission</string>
    <string name="str_camera_permission_notice">Camera permission is forbidden. Please open camera permission in settings</string>
    <string name="str_invalid_qr_code">Invalid QR code</string>
    <string name="str_no_address_data">No address, click top right corner to add</string>
    <string name="str_receive11">Receive</string>
    <string name="str_please_input_money">Amount</string>
    <string name="str_integrated_address_hint">Integrated address</string>
    <string name="str_now_node">Current node</string>
    <string name="str_sync_interval">Sync interval</string>
    <string name="str_change_pwd">Change password</string>
    <string name="str_rescan">Rescan Blockchain </string>
    <string name="str_show_key">Show keys</string>
    <string name="str_seed_key">Show seed</string>
    <string name="str_language_select">Select Language</string>
    <string name="str_unlock_setting">Touch ID/Pattern Unlock</string>
    <string name="str_not_use">OFF</string>
    <string name="str_use">Enable</string>
    <string name="str_enabled">Enabled</string>
    <string name="str_back_up">Backup Wallet</string>
    <string name="str_agreement">Privacy Policy</string>
    <string name="str_official_website">Website</string>
    <string name="str_edition">Version</string>
    <string name="str_reduction">Replace with local backup</string>
    <string name="str_open_source">Open source statement</string>
    <string name="str_copyright">CopyRight</string>
    <string name="str_delet_wallet">Delete Wallet</string>
    <string name="str_delete_wallet_notice2">Delete current wallet and exit APP? Backup your wallet before deleting it.</string>
    <string name="str_delet_wallet_notice">Delete current wallet and exit APP?</string>
    <string name="str_node">Node</string>
    <string name="str_select">Select</string>
    <string name="str_edit">Edit</string>
    <string name="str_node_add">Add Nodes</string>
    <string name="str_ip_address">IP Address</string>
    <string name="str_post">Port</string>
    <string name="str_optional_user_name">Username(optional)</string>
    <string name="str_optional_pwd">Password(optional)</string>
    <string name="str_tag">Label</string>
    <string name="str_edit_node">Edit Nodes</string>
    <string name="str_no_available_nodes">No available nodes, click top right corner to add</string>
    <string name="str_please_input_ip">Please enter IP address</string>
    <string name="str_please_input_post">Please enter port Number</string>
    <string name="str_please_input_tag">Pleasen enter a tag</string>
    <string name="str_default_node">Default node</string>
    <string name="str_initial_port">Invalid port value</string>
    <string name="str_node_auto">Auto
</string>
    <string name="str_sync_high_compute">High operation\nHigh network transmission     </string>
    <string name="str_sync_less_network">Low operation\nLow network transmission</string>
    <string name="str_sync_every">Sync interval </string>
    <string name="str_secend">Second</string>
    <string name="str_re_scan_notice_1">Wallet will re-scan from this height: 0</string>
    <string name="str_re_scan_notice_2">Never or Rarely required. Wallet gets busy for 20-30 minutes</string>
    <string name="str_wallet_topoheight">Wallet topoheight</string>
    <string name="str_back_up_time">Backup time</string>
    <string name="str_back_up_file_name">Backup file name</string>
</resources>