<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.SynchronousIntervalActivity">

    <include layout="@layout/layout_top_view"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/page_margin"
            >

        <LinearLayout
                android:id="@+id/ll_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="horizontal">
            <TextView

                    style="@style/TextView.smallGray"
                    android:text="@string/str_sync_every"
                    />
            <TextView

                    android:id="@+id/tv_sync"
                    style="@style/TextView.pink"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    />

            <TextView

                    style="@style/TextView.smallGray"
                    android:text="@string/str_secend"
                    />

        </LinearLayout>

        <SeekBar

                android:id="@+id/seekbar"
                style="@style/Progressbar.horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/ll_sync"
                android:layout_marginTop="15dp"
                android:progressDrawable="@drawable/progress_horizontal_pink"
                android:thumb="@mipmap/ic_seek_bar"
                />

        <TextView
                app:layout_constraintTop_toBottomOf="@id/seekbar"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextView.smallGray"
                android:text="@string/str_sync_high_compute"
                android:gravity="left"
                android:lineSpacingMultiplier="1.5"
                />

        <TextView
                app:layout_constraintTop_toBottomOf="@id/seekbar"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/TextView.smallGray"

                android:gravity="left"
                android:text="@string/str_sync_less_network"
                android:lineSpacingMultiplier="1.5"
                />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>